fix table size on small screens

--- a/assets/css/custom.scss
+++ b/assets/css/custom.scss
@@ -957,6 +957,10 @@ table {
 	// font-family: Arial, Helvetica, sans-serif;
 	border-collapse: collapse;
 	width: 100%;
+	// Makes the table fit the parent size
+	table-layout: fixed;
+	// overflow-wrap: break-word;
+	
 	// padding: 230px 10px;
 	border: 3px solid var(--hover-color);
 
